--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
     "serve": "^14.2.4",
     "sockjs-client": "^1.6.1",
