--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "uuid": "^9.0.0",
     "web-vitals": "^3.1.1"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "npm install && react-scripts build",
