trying to fix error

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": ".",
   "scripts": {
-    "start": "react-scripts start",
+   "start": "NODE_OPTIONS=--max_old_space_size=4096 react-scripts start",
     "build": "npm install && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
