--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": ".",
   "scripts": {
-   "start": "NODE_OPTIONS=--max_old_space_size=4096 react-scripts start",
+   "start": "react-scripts start",
     "build": "npm install && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
